--- a/commands/math.tex
+++ b/commands/math.tex
@@ -5,6 +5,12 @@
 \newcommand{\isomto} {
     \xto{\sim}
 }
+\newcommand{\incl} {
+    \hookrightarrow
+}
+\newcommand{\subm} {
+    \twoheadrightarrow
+}
 % Bundle
 \newcommand{\bundle}[4] {
     #1 \xto{#3} #2 \xto{#4} #1{}
