--- a/section/title.tex
+++ b/section/title.tex
@@ -1,4 +1,4 @@
-\title{Bundle Structures on Topological Manifolds}
+\title{Microbundles on Topological Manifolds}
 \author{Florian Burger}
 \maketitle
 \pagebreak
