--- a/thesis.tex
+++ b/thesis.tex
@@ -16,4 +16,10 @@
 \input{section/smooth.tex}
 % Document :: Introduction
 \input{section/introduction.tex}
+% Document :: Induced Microbundle
+\input{section/inducedmb.tex}
+% Document :: Whitney Sum
+\input{section/whitneysum.tex}
+% Document :: Normal Microbundle
+\input{section/normalmb.tex}
 \end{document}
