Added implies and bundle command

--- a/commands/math.tex
+++ b/commands/math.tex
@@ -6,12 +6,19 @@
     \xto{\sim}
 }
 \newcommand{\incl} {
-    \hookrightarrow
+    \hookrightarrow{}
 }
 \newcommand{\subm} {
-    \twoheadrightarrow
+    \twoheadrightarrow{}
+}
+% Logic
+\newcommand{\impliesx}[1] {
+    \underset{#1}{\implies}
 }
 % Bundle
+\newcommand{\bundleb} {
+    \mathfrak{b}
+}
 \newcommand{\bundle}[4] {
     #1 \xto{#3} #2 \xto{#4} #1{}
 }
