Remove "mb" suffix

--- a/section/smooth.tex
+++ b/section/smooth.tex
@@ -1,3 +1,3 @@
 \section{Vectorbundles on Smooth Manifolds}
 \input{section/smooth/vectorbundle.tex}
-\input{section/smooth/tangentvb.tex}
+\input{section/smooth/tangent.tex}
