--- a/section/whitneysum.tex
+++ b/section/whitneysum.tex
@@ -1,2 +1,4 @@
-\section{The Whitney Sum}
+\section{Whitney sums}
 \input{section/whitneysum/definition.tex}
+\input{section/whitneysum/compatibility.tex}
+\input{section/whitneysum/theorem.tex}
