--- a/thesis.tex
+++ b/thesis.tex
@@ -17,9 +17,11 @@
 % Document :: Introduction
 \input{section/introduction.tex}
 % Document :: Induced Microbundle
-\input{section/inducedmb.tex}
+\input{section/induced.tex}
 % Document :: Whitney Sum
 \input{section/whitneysum.tex}
 % Document :: Normal Microbundle
-\input{section/normalmb.tex}
+\input{section/normal.tex}
+% Document :: Homotopy
+\input{section/homotopy.tex}
 \end{document}
