--- a/commands/math.tex
+++ b/commands/math.tex
@@ -16,8 +16,17 @@
     \underset{#1}{\implies}
 }
 % Bundle
+\newcommand{\bundlea} {
+    \mathfrak{a}
+}
 \newcommand{\bundleb} {
     \mathfrak{b}
+}
+\newcommand{\bundlec} {
+    \mathfrak{c}
+}
+\newcommand{\bundled} {
+    \mathfrak{d}
 }
 \newcommand{\bundle}[4] {
     #1 \xto{#3} #2 \xto{#4} #1{}
