--- a/section/induced/cone.tex
+++ b/section/induced/cone.tex
@@ -1,4 +1,4 @@
-\\ For a topological space $X$, we define the \textdef{cone} of $X$ as 
+For a topological space $X$, we define the \textdef{cone} of $X$ as 
 \[ CX := X \times [0, 1] / X \times \{1\} \]
 and for a map $f: A \to B$ the \textdef{mapping cone} of $f$ as
 \[ B \sqcup_f CA := B \sqcup CA / \sim \]
