--- a/section/normal.tex
+++ b/section/normal.tex
@@ -1,3 +1,4 @@
 \section{Normal Microbundles}
 \input{section/normal/definition.tex}
+\input{section/normal/composition.tex}
 \input{section/normal/trivial.tex}
