Add "restricting the total space" proposition

--- a/section/introduction.tex
+++ b/section/introduction.tex
@@ -4,3 +4,4 @@
 \input{section/introduction/trivial.tex}
 \input{section/introduction/underlying.tex}
 \input{section/introduction/tangent.tex}
+\input{section/introduction/totalspace.tex}
