--- a/section/normal/composition.tex
+++ b/section/normal/composition.tex
@@ -5,8 +5,13 @@ We define the \textdef{composition microbundle} $\bundleb \circ \bundlec:\bundle
 % proof
 \begin{proof}
 Let $b \in B$. \\
-Choose local trivializations $(U_\bundleb, V_\bundleb, \phi_\bundleb)$ of $b$ and $(U_\bundlec, V_\bundlec, \phi_\bundlec)$ of $j_\bundleb(b)$
-From this, we construct our local trivialization of $\bundleb \circ \bundlec$.
-Let $V := \phi_\bundlec((V_\bundleb \cap U_\bundlec) \times \R^n)$ and
-$U := $
+Choose local trivializations $(U_\bundleb, V_\bundleb, \phi_\bundleb)$ of $b$ and $(U_\bundlec, V_\bundlec, \phi_\bundlec)$ of $j_\bundleb(b)$.
+From this, we construct our local trivialization over $\bundleb \circ \bundlec$.
+Consider $\phi_\bundleb(V_\bundleb \cap U_\bundlec)$, which is a neighborhood of $(b, 0)$.
+Therefore, there exist open neighborhoods $b \in U \subseteq U_\bundleb$ and $0 \in X \subseteq R^n$ such that $U \times X \subseteq \phi_\bundleb(V_\bundleb \cap U_\bundlec)$.
+Analoguous to the proof of restricting the total space in Chapter 1, it follows that
+\[ \exists \varepsilon > 0: U \times B_\varepsilon(0) \subseteq \phi_\bundleb(V_\bundleb \cap U_\bundlec) \]
+\[ \implies U \times \R^n \cong U \times B_\varepsilon(0) \cong \phi_\bundleb^{-1}(U \times B_\varepsilon(0)) \cong \phi_\bundlec^{-1}(\phi_\bundleb^{-1}(U \times B_\varepsilon(0))) \]
+which is an open neighborhood of $i(U)$ and therefore a valid candidate for $V$.
+This concludes local triviality and the proof.
 \end{proof}
