--- a/commands/math.tex
+++ b/commands/math.tex
@@ -28,6 +28,9 @@
 \newcommand{\bundled} {
     \mathfrak{d}
 }
+\newcommand{\bundlen} {
+    \mathfrak{n}
+}
 \newcommand{\bundle}[4] {
     #1 \xto{#3} #2 \xto{#4} #1{}
 }
