Worked on "normal" chapter and changed math shortcuts

--- a/commands/math.tex
+++ b/commands/math.tex
@@ -16,23 +16,29 @@
     \underset{#1}{\implies}
 }
 % Bundle
-\newcommand{\bundlea} {
+\newcommand{\ba} {
     \mathfrak{a}
 }
-\newcommand{\bundleb} {
+\newcommand{\bb} {
     \mathfrak{b}
 }
-\newcommand{\bundlec} {
+\newcommand{\bc} {
     \mathfrak{c}
 }
-\newcommand{\bundled} {
+\newcommand{\bd} {
     \mathfrak{d}
 }
-\newcommand{\bundlen} {
+\newcommand{\bt} {
+    \mathfrak{t}
+}
+\newcommand{\bn} {
     \mathfrak{n}
 }
 \newcommand{\bundle}[4] {
     #1 \xto{#3} #2 \xto{#4} #1{}
+}
+\newcommand{\bundledef}[5] {
+    #1: #2 \xto{#4} #3 \xto{#5} #2{}
 }
 % Restrict
 \newcommand{\restrict}[1] {
