--- a/section/induced/restricted.tex
+++ b/section/induced/restricted.tex
@@ -1,9 +1,9 @@
 \example{(restricted microbundle)}
-\\ Let $\bundleb: \bundle{B}{E}{i}{j}$ be a microbundle and $A \subseteq B$:
-\\ The induced microbundle $\iota^*\bundleb$ with $\iota: A \incl B$ being the inclusion map is called the \textdef{restricted microbundle} and we write $\bundleb \restrict{A} := \iota^*\bundleb$.
+\\ Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $A \subseteq B$:
+\\ The induced microbundle $\iota^*\bb$ with $\iota: A \incl B$ being the inclusion map is called the \textdef{restricted microbundle} and we write $\bb \restrict{A} := \iota^*\bb$.
 
 \begin{remark}
-In the following, we'll consider $E(\bundleb\restrict{A})$ a subset of $E(\bundleb)$.
+In the following, we'll consider $E(\bb\restrict{A})$ a subset of $E(\bb)$.
 This is justified because
-$E(\bundleb\restrict{A}) = \{ (a, e) \in A \times E(\bundleb) \mid a = j(e) \} \cong \{ e \in E(\bundleb) \mid j(e) \in A \} \subseteq E(\bundleb)$.
+$E(\bb\restrict{A}) = \{ (a, e) \in A \times E(\bb) \mid a = j(e) \} \cong \{ e \in E(\bb) \mid j(e) \in A \} \subseteq E(\bb)$.
 \end{remark}
