--- a/section/induced/simplex.tex
+++ b/section/induced/simplex.tex
@@ -1,7 +1,7 @@
 % statement
 \corollary{(extending over a d-simplex)}
 \\ Let $B$ be a $(d + 1)$-simplicial complex, $B'$ it's $d$-skeleton and $\Delta^{d + 1} \cong \sigma \subseteq B$.
-\\ A microbundle $\bundleb$ over $B'$ can be extended to a microbundle over $B' \cup \sigma$ if and only if $\bundleb \restrict{\partial \sigma}$ is trivial.
+\\ A microbundle $\bb$ over $B'$ can be extended to a microbundle over $B' \cup \sigma$ if and only if $\bb \restrict{\partial \sigma}$ is trivial.
 % proof
 \begin{proof}
 The statement follows from the last lemma:
