--- a/section/induced/trivial.tex
+++ b/section/induced/trivial.tex
@@ -1,7 +1,7 @@
 % statement
 \lemma{(induced trivial microbundle)}
-\\ The induced microbundle $f^*\bundleb$ is trivial for every map $f: A \to B$, if $\bundleb$ is already trivial.
+\\ The induced microbundle $f^*\bb$ is trivial for every map $f: A \to B$, if $\bb$ is already trivial.
 % proof
 \begin{proof}
-Let $(V, \phi)$ be a global trivialization of $\bundleb$, i.e $V \cong_\phi B \times \R^n$. Now define $V' := (A \times V) \cap E'$ and $\phi'(a, e) := (a, \phi^{(2)}(e))$. Obviously, $V'$ is a neighborhood of $i'(A)$ and also $\phi'$ is a homeomorphism with inverse $\phi'^{(-1)}(a, x) = (a, \phi^{-1}(f(a), x))$
+Let $(V, \phi)$ be a global trivialization of $\bb$, i.e $V \cong_\phi B \times \R^n$. Now define $V' := (A \times V) \cap E'$ and $\phi'(a, e) := (a, \phi^{(2)}(e))$. Obviously, $V'$ is a neighborhood of $i'(A)$ and also $\phi'$ is a homeomorphism with inverse $\phi'^{(-1)}(a, x) = (a, \phi^{-1}(f(a), x))$
 \end{proof}
