--- a/section/introduction/microbundle.tex
+++ b/section/introduction/microbundle.tex
@@ -1,5 +1,5 @@
 \definition{(microbundle)}
-\\ A microbundle $\bundleb$ is a tuple $\bundleb := (B, E, i, j)$ satisfying the following properties:
+\\ A microbundle $\bb$ is a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
 \begin{itemize}
     \item $B$ is a topological space called the \textdef{base space}
     \item $E$ is a topological space called the \textdef{total space}
@@ -11,4 +11,4 @@
         & U \times\R^n \ar[ur, "\pi_1"'] &
     \end{tikzcd}\]
 \end{itemize}
-We call $n$ the \textdef{fibre dimension} of $\bundleb$.
+We call $n$ the \textdef{fibre dimension} of $\bb$.
