--- a/thesis.tex
+++ b/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{mathtools}
 \usepackage{hyperref}
 \usepackage{tikz-cd}
+\usepackage{parskip} % No Paragraph Indentation
 % Commands
 \input{commands.tex}
 % Document
