--- a/section/induced/cone.tex
+++ b/section/induced/cone.tex
@@ -5,18 +5,18 @@ and for a map $f: A \to B$ the \textdef{mapping cone} of $f$ as
 where $(a, 0) \sim b :\iff f(a) = b$.
 
 \lemma{(extending over a mapping cone)}
-\\ A microbundle $\bundleb$ over $B$ can be extended to a microbundle over the mapping cone $B \sqcup_f CA$ if and only if $f^*\bundleb$ is trivial.
+\\ A microbundle $\bb$ over $B$ can be extended to a microbundle over the mapping cone $B \sqcup_f CA$ if and only if $f^*\bb$ is trivial.
 \begin{proof}
     We show both implications.
     \\ $\implies$:
-    \\ Let $\bundleb'$ be an extension of $\bundleb$ over $B \sqcup_f CA$.
+    \\ Let $\bb'$ be an extension of $\bb$ over $B \sqcup_f CA$.
     \\ Considering $A \xto{f} B \incl B \sqcup_f CA$, the composition $\iota \circ f$ is null-homotopic with homotopy
     \[ H_t(a) := [(a, t)] \]
     Note that $H_0(a) = [(a, 0)] = [f(a)] = (\iota \circ f)(a)$ and $H_1(a) = [(a, 1)] = [(\tilde{a}, 1)] = H_1(\tilde{a})$.
-    \\ $\impliesx{Hom. Thm.} (\iota \circ f)^*\bundleb'$ is trivial
-    \\ Since $(\iota \circ f)^*\bundleb' = f^*(\iota^*\bundleb') = f^*\bundleb$, it follows that $f^*\bundleb$ is trivial.
+    \\ $\impliesx{Hom. Thm.} (\iota \circ f)^*\bb'$ is trivial
+    \\ Since $(\iota \circ f)^*\bb' = f^*(\iota^*\bb') = f^*\bb$, it follows that $f^*\bb$ is trivial.
     \\ $\impliedby$:
-    \\ Let $f^*\bundleb$ be trivial.
+    \\ Let $f^*\bb$ be trivial.
     \\ Analogous to the cone, we define the \textdef{cylinder} of $X$ as
     \[ MX := X \times [0, 1] \]
     and for a map $f: A \to B$ the mapping \textdef{cylinder} of $f$ as
@@ -24,16 +24,16 @@ where $(a, 0) \sim b :\iff f(a) = b$.
     where $(a, 0) \sim b :\iff f(a) = b$.
     \\ In contrast to the mapping cone, there exists a natural retraction from the mapping cylinder to the attached space
     \[ \pi: B \sqcup_f MA \to B; \pi([(a, t)]) := f(a) \]
-    and therefore the induced microbundle $\pi^*\bundleb$ over $B \sqcup_f MA$.
+    and therefore the induced microbundle $\pi^*\bb$ over $B \sqcup_f MA$.
     \\ Considering $A \times \{1\} \incl B \sqcup_f MA \xto{\pi} B$, we see that $\pi \circ \iota \cong f$ and therefore
-    \[ \pi^*\bundleb\restrict{A \times \{1\}} = (\pi \circ \iota)^*\bundleb \cong f^*\bundleb = \mathfrak{e}^n_A\]
-    is trivial. From the lemma of induced trivial microbundles and $(a, t) \mapsto (a, 1)$ it follows that $\pi^*\bundleb\restrict{A \times [\frac{1}{2}, 1]}$ is trivial.
-    \\ $\implies \exists \phi: E(\bundleb\restrict{A \times [\frac{1}{2}, 1]}) \isomto A \times [\frac{1}{2}, 1] \times \R^n$
-    \\ Now we explicitly construct the desired extended microbundle $\bundleb':\bundle{B \sqcup_f CA}{E'}{i'}{j'}$
+    \[ \pi^*\bb\restrict{A \times \{1\}} = (\pi \circ \iota)^*\bb \cong f^*\bb = \mathfrak{e}^n_A\]
+    is trivial. From the lemma of induced trivial microbundles and $(a, t) \mapsto (a, 1)$ it follows that $\pi^*\bb\restrict{A \times [\frac{1}{2}, 1]}$ is trivial.
+    \\ $\implies \exists \phi: E(\bb\restrict{A \times [\frac{1}{2}, 1]}) \isomto A \times [\frac{1}{2}, 1] \times \R^n$
+    \\ Now we explicitly construct the desired extended microbundle $\bundledef{\bb'}{B \sqcup_f CA}{E'}{i'}{j'}$
     \begin{itemize}
-        \item $E' := E(\bundleb\restrict{A \times [\frac{1}{2}, 1]}) / \phi^{-1}(A \times [\frac{1}{2}, 1] \times \{x\})$ (for every $x \in \R^n$)
+        \item $E' := E(\bb\restrict{A \times [\frac{1}{2}, 1]}) / \phi^{-1}(A \times [\frac{1}{2}, 1] \times \{x\})$ (for every $x \in \R^n$)
         \item $i' := \pi \circ i$ the projection $i$ to $E'$
         \item $j'([e]) := [j(e)]$ is well defined, because $[e] = [\tilde{e}] \implies [j(e)] = [j(e')]$
     \end{itemize}
-    Now that we have constructed $\bundleb'$, this proves the claim.
+    Now that we have constructed $\bb'$, this proves the claim.
 \end{proof}
