--- a/section/induced/definition.tex
+++ b/section/induced/definition.tex
@@ -1,15 +1,15 @@
 \definition{(induced microbundle)}
-\\ Let $\bundleb: \bundle{B}{E}{i}{j}$ be a microbundle and $f: A \to B$ a continuous map.
-\\ We can construct a microbundle $f^*\bundleb: \bundle{A}{E'}{i'}{j'}$ defined as follows:
+\\ Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $f: A \to B$ a continuous map.
+\\ We can construct a microbundle $f^*\bb: \bundle{A}{E'}{i'}{j'}$ defined as follows:
 \begin{itemize}
     \item $E' := \{ (a, e) \in A \times E \mid f(a) = j(e) \}$
     \item $i': A \to E'$ with $i'(a) := (a, (i \circ f)(a))$
     \item $j': E' \to A$ with $j'(a, e) := a$
 \end{itemize}
-We call $f^*\bundleb$ the \textdef{induced microbundle} of $\bundleb$ over $f$.
+We call $f^*\bb$ the \textdef{induced microbundle} of $\bb$ over $f$.
 \begin{proof}
 It is clear that $i'$ and $j'$ are continuous and that $id_A = j' \circ i'$.
-\\ So it remains to be shown that $f^*\bundleb$ is locally trivial for every $a \in A$:
+\\ So it remains to be shown that $f^*\bb$ is locally trivial for every $a \in A$:
 \begin{itemize}
     \item $U' := f^{-1}(U) \subseteq A$ is an open neighborhood of $a$.
     \item $V' := j'^{-1}(U') \subseteq E'$ is an open neighborhood of $i'(U')$.
