--- a/section/normal.tex
+++ b/section/normal.tex
@@ -3,3 +3,6 @@
 \input{section/normal/trivial.tex}
 \input{section/normal/composition.tex}
 \input{section/normal/transitivity.tex}
+\input{section/normal/retract.tex}
+\input{section/normal/totalspace.tex}
+\input{section/normal/milnor.tex}
