--- a/section/whitneysum/compatibility.tex
+++ b/section/whitneysum/compatibility.tex
@@ -1,10 +1,10 @@
 \lemma{(compatibility)}
-\\ Let $\bundleb_1$ and $\bundleb_1$ be two microbundles over $B$ and $f: A \to B$ a map.
-\\ Induced microbundle and whitney sum are compatible, i.e. $f^*(\bundleb_1 \oplus \bundleb_2) \cong f^*\bundleb_1 \oplus f^*\bundleb_2$
+\\ Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and $f: A \to B$ a map.
+\\ Induced microbundle and whitney sum are compatible, i.e. $f^*(\bb_1 \oplus \bb_2) \cong f^*\bb_1 \oplus f^*\bb_2$
 \begin{proof}
     From the definition of the induced microbundle and the whitney sum, we can derive the total spaces:
-    \\ $E(f^*(\bundleb_1 \oplus \bundleb_2)) = \{(a, (e_1, e_2)) \in A \times (E_1 \times E_2) \mid j_1(e_1) = j_2(e_2) = f(a) \}$
-    \\ $E(f^*\bundleb_1 \oplus f^*\bundleb_2) = \{((a_1, e_1), (a_2, e_2)) \in (A \times E_1) \times (A \times E_2) \mid j(a_1, e_1) = j(a_2, e_2)$ and $f(a_i) = j(e_i)\}$
+    \\ $E(f^*(\bb_1 \oplus \bb_2)) = \{(a, (e_1, e_2)) \in A \times (E_1 \times E_2) \mid j_1(e_1) = j_2(e_2) = f(a) \}$
+    \\ $E(f^*\bb_1 \oplus f^*\bb_2) = \{((a_1, e_1), (a_2, e_2)) \in (A \times E_1) \times (A \times E_2) \mid j(a_1, e_1) = j(a_2, e_2)$ and $f(a_i) = j(e_i)\}$
     \\ Those two total spaces are homeomorphic via $\phi(a, (e_1, e_2)) := ((a, e_1), (a, e_2))$ and $\phi^{-1}((a, e_1), (a, e_2)) = (a, (e_1, e_2))$. $\phi$ and $\phi^{-1}$ are continuous because they are componentwise continuous.
     \\ Obviously, $\phi \circ i = i$ and $\phi \circ j = j$, which concludes the proof. 
 \end{proof}
