--- a/section/induced/composition.tex
+++ b/section/induced/composition.tex
@@ -1,6 +1,8 @@
-\proposition{(composition)}
-\\ Let $A \xto{f} B \xto{g} C$ be topological spaces and $\mathfrak{c}: \bundle{C}{E}{i}{j}$ be a microbundle:
-\[(g \circ f)^*\mathfrak{c} \cong f^*(g^*\mathfrak{c})\]
+% statement
+\proposition{(composition)} \\
+Let $A \xto{f} B \xto{g} C$ be topological spaces and $\mathfrak{c}: \bundle{C}{E}{i}{j}$ be a microbundle:
+\[ (g \circ f)^*\mathfrak{c} \cong f^*(g^*\mathfrak{c}) \]
+% proof
 \begin{proof}
 We'll compare the two total spaces and conclude that they are homeomorphic.
 \begin{enumerate}
