--- a/section/introduction.tex
+++ b/section/introduction.tex
@@ -2,6 +2,6 @@
 \input{section/introduction/microbundle.tex}
 \input{section/introduction/isomorphic.tex}
 \input{section/introduction/trivial.tex}
-\input{section/introduction/underlying.tex}
+% \input{section/introduction/underlying.tex}
 \input{section/introduction/tangent.tex}
 \input{section/introduction/totalspace.tex}
