--- a/section/normal/definition.tex
+++ b/section/normal/definition.tex
@@ -1,5 +1,6 @@
-\definition{(normal microbundle)}
-\\ Let $M$ and $N$ be two topological manifolds with $N \subseteq M$.
-\\ We call a microbundle of the form
-\[\mathfrak{n}: \bundle{N}{U}{\iota}{r}\]
-where $U \subseteq M$ is a neighborhood of $N$, a \textdef{normal microbundle} of $N$ in $M$.
+% definition
+\definition{(normal microbundle)} \\
+Let $M$ and $N$ be two topological manifolds with $N \sub M$.
+We call a microbundle of the form
+\[ \mathfrak{n}: \bundle{N}{U}{\iota}{r} \]
+where $U \sub M$ is a neighborhood of $N$, a \textdef{normal microbundle} of $N$ in $M$.
