--- a/section/normal/milnor.tex
+++ b/section/normal/milnor.tex
@@ -5,5 +5,5 @@ Finally, we gathered all the tools to prove Milnor's theorem.
 For a sufficently large $q \in \N$, $N = N \times \{0\}$ has a normal microbundle in $M \times \R^q$.
 % proof
 \begin{proof}
-
+% TODO
 \end{proof}
