--- a/section/normal/retract.tex
+++ b/section/normal/retract.tex
@@ -1,3 +1,4 @@
+% foreword
 Every topological manifold is an absolute neighborhood retract (ANR).
 
 It follows that by restricting $M$, if necessary, to an open neighborhood of $N$,
