--- a/section/normal/totalspace.tex
+++ b/section/normal/totalspace.tex
@@ -13,6 +13,7 @@ Now, we have the homeomorphism $\phi: E(\iota^*\bt_M) \to E(r^*\bt_N)$ with
 $\phi(n, (m_1, m_2)) = (m_2, (r(m_2), n))$ and $\phi^{-1}(m, (n_1, n_2)) = (n_2, (n_2, m))$.
 We easily see that $\phi$ suffices all requirements of $E(\iota^*\bt_M)$ and $E(r^*\bt_N)$.
 \end{proof}
+
 % remark
 \begin{remark}
 Note that the following diagram commutes
@@ -28,5 +29,5 @@ There exists a normal microbundle $\bn$ of $N$ in $E(r^*\bt_N)$ with $\bn \cong 
 % proof
 \begin{proof}
 Obviously, $\bn := r^*\bt_N \restrict{N}$ is a normal microbundle of $N$ in $E(r^*\bt_N)$.
-Since $E(r^*\bt_N \restrict{N}) \subseteq E(r^*\bt_N)$, isomorphy follows from the previous lemma and remark.
+Since $E(r^*\bt_N \restrict{N}) \sub E(r^*\bt_N)$, isomorphy follows from the previous lemma and remark.
 \end{proof}
