--- a/section/smooth/vectorbundle.tex
+++ b/section/smooth/vectorbundle.tex
@@ -1,10 +1,12 @@
+% INCOMPLETE
+% definition
 \definition{(vector bundle)}
 \\ A vector bundle $\xi$ is a tuple $\xi := (B, E, \pi, +, \cdot)$ satisfying the following conditions:
 \begin{itemize}
     \item $B$ is a topological space (\textdef{base space})
     \item $E$ is a topological space (\textdef{total space})
     \item $(\pi^{-1}(b), +, \cdot)$ is a real vector space for every $b \in B$
-    \item Every $b \in B$ is \textdef{locally trivializable}, i.e there exist neighborhoods $U \subseteq B$ of $b$ such that the following diagram commutes
+    \item Every $b \in B$ is \textdef{locally trivializable}, i.e there exist neighborhoods $U \sub B$ of $b$ such that the following diagram commutes
     \[\begin{tikzcd}
         \pi^{-1}(U) \ar[r, "\pi"] & U \\
         U \times \R^n \ar[u, "\phi"] \ar[ur, "\pi_1"]& \\
