--- a/section/homotopy.tex
+++ b/section/homotopy.tex
@@ -1,1 +1,7 @@
 \section{Homotopy and Microbundles}
+\input{section/homotopy/mapgerm.tex}
+\input{section/homotopy/isomorphism.tex}
+\input{section/homotopy/bundle.tex}
+\input{section/homotopy/williamson.tex}
+\input{section/homotopy/glue.tex}
+\input{section/homotopy/piecewise.tex}
