--- a/section/introduction/microbundle.tex
+++ b/section/introduction/microbundle.tex
@@ -1,12 +1,13 @@
-\definition{(microbundle)}
-\\ A microbundle $\bb$ is a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
+% definition
+\definition{(microbundle)} \\
+A microbundle $\bb$ is a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
 \begin{itemize}
     \item $B$ is a topological space called the \textdef{base space}
     \item $E$ is a topological space called the \textdef{total space}
-    \item $i: B \to E$ and $j: E \to B$ are continuous maps with $id_B = j \circ i$
-    \item Every $b \in B$ is \textdef{locally trivializable}, i.e there exist open neighborhoods $U \subseteq B$ of $b$ and $V \subseteq E$ of $i(U)$ such that the following diagram commutes:
+    \item $i: B \to E$ (\textdef{injection}) and $j: E \to B$ (\textdef{projection}) are continuous maps with $id_B = j \circ i$
+    \item Every $b \in B$ is \textdef{locally trivializable}, i.e there exist open neighborhoods $U \sub B$ of $b$ and $V \sub E$ of $i(U)$ such that the following diagram commutes:
     \[\begin{tikzcd}[column sep=tiny]
-        & V \ar[dr, "i"] \ar[dd, "\psi"] & \\
+        & V \ar[dr, "j"] \ar[dd, "\psi"] & \\
         U \ar[ur, "i"] \ar[dr, "{(id, 0)}"'] & & U \\
         & U \times\R^n \ar[ur, "\pi_1"'] &
     \end{tikzcd}\]
