--- a/section/introduction/trivial.tex
+++ b/section/introduction/trivial.tex
@@ -1,11 +1,13 @@
-\example{(trivial microbundle)}
-\\Let $B$ be a topological space and $n \in \N$:
-\\ The diagram $\mathfrak{e}^n_B: \bundle{B}{B \times \R^n}{\iota}{\pi}$ constitutes a microbundle, where
+% definition
+\example{(trivial microbundle)} \\
+Let $B$ be a topological space and $n \in \N$.
+The diagram $\mathfrak{e}^n_B: \bundle{B}{B \times \R^n}{\iota}{\pi}$ constitutes a microbundle, where
 $\iota(b) := (b, 0)$ and $\pi(b, x) := b$.
 We call $\mathfrak{e}^n_B$ the \textdef{standard microbundle} and every microbundle isomorphic to $\bb^n_B$ \textdef{trival}.
-
-\lemma{(criteria for triviality)}
-\\ A microbundle $\bb$ of $B$ is trivial if and only if there exists a open subset $B \subseteq U$ with $U \cong B \times \R^n$.
+% stattement
+\lemma{(criteria for triviality)} \\
+A microbundle $\bb$ of $B$ is trivial if and only if there exists a open subset $B \sub U$ with $U \cong B \times \R^n$.
+% proof
 \begin{proof}
-    
+ % TODO
 \end{proof}
