--- a/section/normal/trivial.tex
+++ b/section/normal/trivial.tex
@@ -1,9 +1,13 @@
-\definition{(product neighborhood)}
-\\ Again, let $M$ and $N$ be two topological manifolds with $N \subseteq M$.
-\\ We say that $N$ has a \textdef{product neighborhood} in $M$ if there exists a trivial normal microbundle of $N$ in $M$.
+% definition
+\definition{(product neighborhood)} \\
+Again, let $M$ and $N$ be two topological manifolds with $N \sub M$.
+We say that $N$ has a \textdef{product neighborhood} in $M$ if
+there exists a trivial normal microbundle of $N$ in $M$.
 
-\lemma{(criteria for product neighborhoods)}
-\\ A submanifold $N \subseteq M$ has a product neighborhood if and only if there exists a neighborhood $U$ of $N$ with $(U, M) \cong (M \times R^n, M \times 0)$.
+% statement
+\lemma{(criteria for product neighborhoods)} \\
+A submanifold $N \sub M$ has a product neighborhood if and only if there exists a neighborhood $U$ of $N$ with $(U, M) \cong (M \times R^n, M \times 0)$.
+% proof
 \begin{proof}
-This follows directly from the definition of normal microbundles and the criteria for trivial microbundles (NUMBER).
+This follows directly from the definition of normal microbundles and the criteria for trivial microbundles.
 \end{proof}
