--- a/section/smooth/tangent.tex
+++ b/section/smooth/tangent.tex
@@ -1,3 +1,4 @@
-\example{(tangent vector bundle)}
-\\ Let $M$ be a smooth manifold:
-\\ $\xi: TM \xto{\pi} M$ is a vector bundle, where $\pi(p, v) := p$.
+% statement
+\example{(tangent vector bundle)} \\
+Let $M$ be a smooth manifold:
+$\xi: TM \xto{\pi} M$ is a vector bundle, where $\pi(p, v) := p$.
