Worked on Homtopy Chapter

--- a/commands/environments.tex
+++ b/commands/environments.tex
@@ -1,17 +1,24 @@
 % Environment
 % Environment :: Definition
+\theoremstyle{definition}
 \newtheorem{definition}{Definition}
 % Environment :: Theorem
+\theoremstyle{plain}
 \newtheorem{theorem}[definition]{Theorem}
 % Environment :: Proposition
+\theoremstyle{plain}
 \newtheorem{proposition}[definition]{Proposition}
 % Environment :: Corollary
+\theoremstyle{plain}
 \newtheorem{corollary}[definition]{Corollary}
 % Environment :: Lemma
+\theoremstyle{plain}
 \newtheorem{lemma}[definition]{Lemma}
 % Environment :: Remark
+\theoremstyle{remark}
 \newtheorem{remark}[definition]{Remark}
 % Environment :: Example
+\theoremstyle{definition}
 \newtheorem{example}[definition]{Example}
 % Numbering
 \numberwithin{definition}{section}
