--- a/section/homotopy.tex
+++ b/section/homotopy.tex
@@ -5,3 +5,5 @@
 \input{section/homotopy/williamson.tex}
 \input{section/homotopy/glue.tex}
 \input{section/homotopy/piecewise.tex}
+\input{section/homotopy/nbhd.tex}
+\input{section/homotopy/theorem.tex}
