--- a/section/homotopy/williamson.tex
+++ b/section/homotopy/williamson.tex
@@ -48,3 +48,11 @@ We prove the statement locally, then glue the function together for the prove.
     It follows that also $F$ is a homeomorphism on its image which completes the proof.
 \end{enumerate}
 \end{proof}
+
+% corollary
+\corollary{(induced microbundles)} \\
+If a map $g: B \to B'$ is covered by a bundle germ $\bb \double \bb'$ then $\bb$ is isomorphic to the induced bundle $g^*\bb'$.
+% proof
+\begin{proof}
+% TODO
+\end{proof}
