--- a/section/introduction/microbundle.tex
+++ b/section/introduction/microbundle.tex
@@ -1,6 +1,6 @@
 % definition
 \definition{(microbundle)} \\
-A microbundle $\bb$ is a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
+A \textdef{microbundle} $\bb$ is \emph{hallo} a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
 \begin{itemize}
     \item $B$ is a topological space called the \textdef{base space}
     \item $E$ is a topological space called the \textdef{total space}
