Made Part-Titletext normal

--- a/src/sections/homotopy/parts/glueing.tex
+++ b/src/sections/homotopy/parts/glueing.tex
@@ -1,5 +1,5 @@
 % statement
-\lemma{(glueing together bundle map-germs)} \\
+\lemma{\parttitle{glueing together bundle map-germs}} \\
 Let $\bb$ be a microbundle over $B$ and $\{B_\alpha\}$ a locally finite collection of closed sets covering $B$.
 Additionally, we are given $\bgerm{F_\alpha}{\bb\restr{B_\alpha}}{\bb'}$, a collection of bundle map-germs with
 $F_\alpha = F_\beta$ on $\bb\restr{B_\alpha \cap B_\beta}$
