--- a/src/sections/homotopy/parts/theorem.tex
+++ b/src/sections/homotopy/parts/theorem.tex
@@ -16,7 +16,7 @@
 }
 
 % statement
-\lemma{(piecewise triviality)} \\
+\lemma{\parttitle{piecewise triviality}} \\
 Let $\bb$ be a microbundle over $B \times [0, 1]$ such that both $\bbleft$ and $\bbright$ are trivial.
 Then $\bb$ itself is already trivial.
 % proof
@@ -29,7 +29,7 @@ From the corollary it follows that $\bb \cong \bbleft$.
 \end{proof}
 
 % statement
-\lemma{()} \\
+\lemma{\parttitle{}} \\
 Let $\bb$ be a microbundle over $B \times [0, 1]$.
 Every $b \in B$ has a neighborhood $V$ where $\bb\restr{V \times [0, 1]}$ is trivial.
 %proof
@@ -42,7 +42,7 @@ Iteratively applying the previous lemma, it follows that $\bb\restr{V \times [0,
 \end{proof}
 
 % lemma
-\lemma{()} \\
+\lemma{\parttitle{}} \\
 Let $\bb$ be a microbundle over $B \times [0, 1]$ where $B$ is paracompact.
 Then there exists a bundle map-germ $F: \bb \to \bb\restr{B \times \{1\}}$
 covering the standard retraction $r: B \times [0, 1] \to B \times \{1\}$ .
@@ -71,7 +71,7 @@ Pieced together with the previous lemma, we obtain $R: \bb \times [0, 1]\to \bb 
 \end{proof}
 
 % theorem
-\theorem{(Homotopy Theorem)} \\
+\theorem{\parttitle{Homotopy Theorem}} \\
 Let $\bb$ be a microbundle of $B$ and $f, g: A \to B$ be two maps.
 \[ f \simeq g \implies f^*\bb \cong g^*\bb \]
 % proof
