--- a/src/sections/homotopy/parts/williamson.tex
+++ b/src/sections/homotopy/parts/williamson.tex
@@ -1,5 +1,5 @@
 % foreword
-\lemma{(closed balls under homeomorphism)} \\
+\lemma{\parttitle{closed balls under homeomorphism}} \\
 For a homeomorphism $\phi: \R^n \isomto R^n$ applies:
 \[ \abs{\phi(x) - x} < 1, \forall x \in \clball[2] \implies \clball[1] \sub \phi(\clball[2]) \]
 % proof
@@ -13,7 +13,7 @@ Since $R^n - \clball[2]$ is path-connected, $R^n - \phi(\clball[2])$ is as well.
 \end{proof}
 
 % statement
-\lemma{(Williamson)} \\
+\lemma{\parttitle{Williamson}} \\
 A bundle map-germ $\bgerm{F}{\bb}{\bb'}$ on the same base space $B$ covering the identity map is an isomorphism-germ.
 % proof
 \begin{proof}
@@ -50,7 +50,7 @@ We prove the statement locally, then glue the function together for the prove.
 \end{proof}
 
 % corollary
-\corollary{(induced microbundles)} \\
+\corollary{\parttitle{induced microbundles}} \\
 If a map $g: B \to B'$ is covered by a bundle germ $\bb \double \bb'$ then $\bb$ is isomorphic to the induced bundle $g^*\bb'$.
 % proof
 \begin{proof}
