--- a/src/sections/induced/parts/composition.tex
+++ b/src/sections/induced/parts/composition.tex
@@ -1,5 +1,5 @@
 % statement
-\proposition{(composition)} \\
+\proposition{\parttitle{composition}} \\
 Let $A \xto{f} B \xto{g} C$ be topological spaces and $\mathfrak{c}: \bundle{C}{E}{i}{j}$ be a microbundle:
 \[ (g \circ f)^*\mathfrak{c} \cong f^*(g^*\mathfrak{c}) \]
 % proof
