--- a/src/sections/induced/parts/cone.tex
+++ b/src/sections/induced/parts/cone.tex
@@ -5,7 +5,7 @@ and for a map $f: A \to B$ the \defterm{mapping cone} of $f$ as
 \[ B \sqcup_f CA := B \sqcup CA / \sim \]
 where $(a, 0) \sim b :\iff f(a) = b$.
 % statement
-\lemma{(extending over a mapping cone)} \\
+\lemma{\parttitle{extending over a mapping cone}} \\
 A microbundle $\bb$ over $B$ can be extended to a microbundle over the mapping cone $B \sqcup_f CA$ if and only if $f^*\bb$ is trivial.
 % proof
 \begin{proof}
