--- a/src/sections/induced/parts/restriction.tex
+++ b/src/sections/induced/parts/restriction.tex
@@ -1,5 +1,5 @@
 % statement
-\example{(restricted microbundle)} \\
+\example{\parttitle{restricted microbundle}} \\
 Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $A \sub B$:
 The induced microbundle $\iota^*\bb$ with $\iota: A \incl B$ being the inclusion map is called the \defterm{restricted microbundle} and
 we write $\bb \restr{A} := \iota^*\bb$.
