--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -1,5 +1,5 @@
 % statement
-\corollary{(extending over a d-simplex)} \\
+\corollary{\parttitle{extending over a d-simplex}} \\
 Let $B$ be a $(d + 1)$-simplicial complex, $B'$ it's $d$-skeleton and $\Delta^{d + 1} \cong \sigma \sub B$.
 A microbundle $\bb$ over $B'$ can be extended to a microbundle over $B' \cup \sigma$ if and only if $\bb \restr{\partial \sigma}$ is trivial.
 % proof
