--- a/src/sections/induced/parts/trivial.tex
+++ b/src/sections/induced/parts/trivial.tex
@@ -1,5 +1,5 @@
 % statement
-\lemma{(induced trivial microbundle)} \\
+\lemma{\parttitle{induced trivial microbundle}} \\
 The induced microbundle $f^*\bb$ is trivial for every map $f: A \to B$, if $\bb$ is already trivial.
 % proof
 \begin{proof}
