--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -1,5 +1,5 @@
 % definition
-\definition{(microbundle)} \\
+\definition{\parttitle{microbundle}} \\
 A \defterm{microbundle} $\bb$ is \emph{hallo} a tuple $\bb := (B, E, i, j)$ satisfying the following properties:
 \begin{itemize}
     \item $B$ is a topological space called the \defterm{base space}
