--- a/src/sections/microbundle/parts/tangent.tex
+++ b/src/sections/microbundle/parts/tangent.tex
@@ -1,5 +1,5 @@
 % statement
-\example{(tangent microbundle)} \\
+\example{\parttitle{tangent microbundle}} \\
 Let $M$ be a topological manifold.
 We derive the \defterm{tangent microbundle} $\bundledef{\bt_M}{M}{M \times M}{\Delta}{\pi_1}$, where
 $\Delta$ is the diagonal map and $\pi_1$ ist the projection map on the first component.
