--- a/src/sections/microbundle/parts/trivial.tex
+++ b/src/sections/microbundle/parts/trivial.tex
@@ -1,11 +1,11 @@
 % definition
-\example{(trivial microbundle)} \\
+\example{\parttitle{trivial microbundle}} \\
 Let $B$ be a topological space and $n \in \N$.
 The diagram $\mathfrak{e}^n_B: \bundle{B}{B \times \R^n}{\iota}{\pi}$ constitutes a microbundle, where
 $\iota(b) := (b, 0)$ and $\pi(b, x) := b$.
 We call $\mathfrak{e}^n_B$ the \defterm{standard microbundle} and every microbundle isomorphic to $\bb^n_B$ \defterm{trival}.
 % stattement
-\lemma{(criteria for triviality)} \\
+\lemma{\parttitle{criteria for triviality}} \\
 A microbundle $\bb$ of $B$ is trivial if and only if there exists a open subset $B \sub U$ with $U \cong B \times \R^n$.
 % proof
 \begin{proof}
