--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -1,5 +1,5 @@
 % statement
-\example{(underlying microbundle)} \\
+\example{\parttitle{underlying microbundle}} \\
 Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle:
 The microbundle $\lvert \xi \rvert: \bundle{B}{E}{i}{\pi}$ with $i(b) := \phi_b(b, 0)$, where
 $\phi_b: U_b \times \R^n \to \pi^{-1}(U_b)$ is the local trivialization over a
