--- a/src/sections/normal/parts/composition.tex
+++ b/src/sections/normal/parts/composition.tex
@@ -1,5 +1,5 @@
 % statement
-\definition{(composition microbundle)} \\
+\definition{\parttitle{composition microbundle}} \\
 Let $\bundledef{\bb}{B}{E}{i_\bb}{j_\bb}$ and $\bundledef{\bc}{E}{E'}{i_\bc}{j_\bc}$ be two microbundles.
 We define the \defterm{composition microbundle} $\bundledef{\bb \circ \bc}{B}{E'}{i}{j}$ with
 $i(b) := (i_\bc \circ i_\bb)(b)$ and $j(e') := (j_\bb \circ j_\bc)(e')$
