--- a/src/sections/normal/parts/totalspace.tex
+++ b/src/sections/normal/parts/totalspace.tex
@@ -1,5 +1,5 @@
 % statement
-\lemma{(homeomorphism of total spaces)} \\
+\lemma{\parttitle{homeomorphism of total spaces}} \\
 Let $\bt_N$ and $\bt_M$ be the tangent microbundles of $N$ and $M$.
 The total space $E(\iota^*\bt_M)$ and $E(r^*\bt_N)$ are homeomorphic.
 % proof
