--- a/src/sections/normal/parts/transitivity.tex
+++ b/src/sections/normal/parts/transitivity.tex
@@ -1,5 +1,5 @@
 % statement
-\lemma{(transitivity of normal microbundles)} \\
+\lemma{\parttitle{transitivity of normal microbundles}} \\
 Let $M, N$ and $P$ be topological manifolds with $P \sub N \sub M$.
 There exists a normal microbundle $\bn$ of $P$ in $M$, if
 there exist normal microbundles $\bn_p: \bundle{P}{U_N}{i_P}{j_P}$ in $N$ and $\bn_n: \bundle{N}{U_M}{i_N}{j_N}$ in $M$.
