--- a/src/sections/normal/parts/trivial.tex
+++ b/src/sections/normal/parts/trivial.tex
@@ -1,11 +1,11 @@
 % definition
-\definition{(product neighborhood)} \\
+\definition{\parttitle{product neighborhood}} \\
 Again, let $M$ and $N$ be two topological manifolds with $N \sub M$.
 We say that $N$ has a \defterm{product neighborhood} in $M$ if
 there exists a trivial normal microbundle of $N$ in $M$.
 
 % statement
-\lemma{(criteria for product neighborhoods)} \\
+\lemma{\parttitle{criteria for product neighborhoods}} \\
 A submanifold $N \sub M$ has a product neighborhood if and only if there exists a neighborhood $U$ of $N$ with $(U, M) \cong (M \times R^n, M \times 0)$.
 % proof
 \begin{proof}
