--- a/src/sections/whitney/parts/compatibility.tex
+++ b/src/sections/whitney/parts/compatibility.tex
@@ -1,5 +1,5 @@
 % statement
-\lemma{(compatibility)} \\
+\lemma{\parttitle{compatibility}} \\
 Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and $f: A \to B$ a map.
 Induced microbundle and whitney sum are compatible, i.e. $f^*(\bb_1 \oplus \bb_2) \cong f^*\bb_1 \oplus f^*\bb_2$
 % proof
