--- a/src/sections/whitney/parts/definition.tex
+++ b/src/sections/whitney/parts/definition.tex
@@ -1,5 +1,5 @@
 % definition
-\definition{(whitney sum)} \\
+\definition{\parttitle{whitney sum}} \\
 Let $\bb_1$ and $\bb_1$ be two microbundles over a topological space $B$.
 We define the \defterm{whitney sum} $\bb_1 \oplus \bb_2$ as follows:
 \begin{itemize}
