--- a/src/sections/homotopy/parts/germ.tex
+++ b/src/sections/homotopy/parts/germ.tex
@@ -2,7 +2,7 @@
 % TODO
 
 % definition
-\definition{(map-germ)} \\
+\definition{\parttitle{map-germ}} \\
 Let $(X, A)$ and $(Y, B)$ be two topological pairs.
 A \defterm{map-germ} $F: (X, A) \Rightarrow (Y, B)$ is an equivalence class of maps $f: (X, A) \to (Y, B)$, where
 $f \sim g :\iff f\restr{U} = g\restr{U}$ for some neighborhood $U \sub X$ of $A$. 
