--- a/src/sections/induced/parts/definition.tex
+++ b/src/sections/induced/parts/definition.tex
@@ -1,5 +1,5 @@
 % statement
-\definition{(induced microbundle)} \\
+\definition{\parttitle{induced microbundle}} \\
 Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $f: A \to B$ a continuous map.
 We can construct a microbundle $f^*\bb: \bundle{A}{E'}{i'}{j'}$ defined as follows:
 \begin{itemize}
