--- a/src/sections/microbundle/parts/totalspace.tex
+++ b/src/sections/microbundle/parts/totalspace.tex
@@ -1,5 +1,5 @@
 % statement
-\proposition{(restricting the total space)} \\
+\proposition{\parttitle{restricting the total space}} \\
 Let $\bb: \bundle{B}{E}{i}{j}$ be a microbundle and $E'$ an arbitray neighborhood of $i(B)$.
 The restriction $\bundledef{\bb'}{B}{E'}{i}{j\restr{E'}}$ is a microbundle isomorphic to $\bb$.
 % proof
