--- a/src/sections/normal/parts/definition.tex
+++ b/src/sections/normal/parts/definition.tex
@@ -1,5 +1,5 @@
 % definition
-\definition{(normal microbundle)} \\
+\definition{\parttitle{normal microbundle}} \\
 Let $M$ and $N$ be two topological manifolds with $N \sub M$.
 We call a microbundle of the form
 \[ \mathfrak{n}: \bundle{N}{U}{\iota}{r} \]
